@@ -11,6 +11,7 @@ documents those changes that are of interest to users and administrators.
  -- Fix main scheduler not considering hetjobs when building the job queue.
  -- Fix regression for sacct to display old jobs without a start time.
  -- Fix setting correct number of gres topology bits.
+ -- Update hetjobs pending state reason when appropriate.
 
 * Changes in Slurm 18.08.6-2
 ============================
